crates/module-system/sov-modules-macros/tests/integration/trybuild/module_info/no_generics.stderr
error: No generic parameters found
 --> tests/integration/trybuild/module_info/no_generics.rs:3:17
  |
3 | #[derive(Clone, ModuleInfo)]
  |                 ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ModuleInfo` (in Nightly builds, run with -Z macro-backtrace for more info)
