crates/module-system/sov-modules-macros/tests/integration/trybuild/module_info/no_generics.rs
use sov_modules_api::ModuleInfo;

#[derive(Clone, ModuleInfo)]
struct TestStruct {}

fn main() {}
